--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.6",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "framer-motion": "^11.5.4",
     "next": "14.2.8",
+    "node-fetch": "^3.3.2",
+    "process": "^0.11.10",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
