--- a/package.json
+++ b/package.json
@@ -10,16 +10,27 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
+    "@pqina/react-pintura": "^9.0.3",
+    "@react-three/drei": "^9.114.0",
+    "@react-three/fiber": "^8.17.8",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "filepond": "^4.31.4",
+    "filepond-plugin-image-crop": "^2.0.6",
+    "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^11.5.4",
-    "next": "14.2.8",
+    "next": "^14.2.8",
     "node-fetch": "^3.3.2",
     "process": "^0.11.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "react-easy-crop": "^5.0.8",
+    "react-filepond": "^7.1.2",
+    "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.26.1",
-    "stream-browserify": "^3.0.0"
+    "stream-browserify": "^3.0.0",
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@types/node": "^20",
